--- a/web/templates/web/entry_list.html
+++ b/web/templates/web/entry_list.html
@@ -117,7 +117,7 @@
               {% endif %}
             </td>
             <td>
-              <a href="{% url 'entry_edit' e.pk %}" class="btn btn-sm btn-outline-secondary mb-1">Edit</a>
+              <a href="{% url 'entry_edit' e.pk %}" class="btn btn-sm btn-outline-secondary">Edit</a>
               <a href="{% url 'entry_delete' e.pk %}" class="btn btn-sm btn-outline-danger">Delete</a>
             </td>
           </tr>
