--- a/web/templates/web/card_list.html
+++ b/web/templates/web/card_list.html
@@ -183,7 +183,7 @@
 
             <!-- ACTIONS -->
             <td>
-              <a href="{% url 'card_edit' c.pk %}" class="btn btn-sm btn-outline-secondary mb-1">Edit</a>
+              <a href="{% url 'card_edit' c.pk %}" class="btn btn-sm btn-outline-secondary">Edit</a>
               <a href="{% url 'card_delete' c.pk %}" class="btn btn-sm btn-outline-danger">Delete</a>
             </td>
           </tr>
